# cpp-backend-template-practicum-november

./: .gitignore  .gitmodules  README.md  prepare_env.sh  prepare_test.sh  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  pr_closer.workflow  pr_closer.yml
sprint1/problems/cafeteria/precode/: CMakeLists.txt
sprint1/problems/cafeteria/precode/src/: cafeteria.h  clock.h  gascooker.h  hotdog.h  ingredients.h  main.cpp  result.h
sprint1/problems/cafeteria/solution/: README.md
sprint1/problems/final_task/solution/precode/src/: http_server.cpp  model.cpp  request_handler.cpp
sprint1/problems/map_json/precode/: CMakeLists.txt  Dockerfile
sprint1/problems/map_json/precode/src/: constants.h  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tagged.h
sprint1/problems/radio/precode/src/: main.cpp
sprint1/problems/seabattle/precode/: CMakeLists.txt
sprint1/problems/sum/precode/: CMakeLists.txt  main.cpp
sprint1/problems/sync_server/precode/: CMakeLists.txt
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/data/: config.json
sprint2/problems/command_line/solution/precode/: Dockerfile.txt
sprint2/problems/command_line/solution/precode/src/: application.cpp  sdk.h
sprint2/problems/command_line/solution/src/: application — копия.h  application.h  args.h  auth_handler.h  direction.h  dog.h  dogs.h  game_handler.h  http_server.cpp  http_server.h  join_handler.cpp  json_loader.cpp  json_loader.h  logger.h  main.cpp  model.cpp  model.h  player.h  player_tokens.h  players.h  point.h  position_generator.h  request_handler.cpp  request_handler.h  road_map.h  speed.h  tagged.h  ticker.h
sprint2/problems/logger/precode/: main.cpp  my_logger.h
sprint3/problems/flamegraph/precode/: shoot.py
sprint3/problems/gather-tests/precode/src/: collision_detector.cpp
sprint3/problems/gather/precode/: README.md
sprint3/problems/scores/precode/data/: config.json
sprint3/problems/scores/precode/static/: abc..html  about.html  file with spaces.html  game.html  game_old.html  index.html
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: application.cpp  application.h  join_handler.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/tv/precode/: CMakeLists.txt
sprint3/problems/tv/precode/src/: tv.h
sprint3/problems/tv/precode/tests/: boost_controller_tests.cpp  boost_test_helpers.h  boost_tv_tests.cpp  catch_controller_tests.cpp  catch_tv_tests.cpp  google_controller_tests.cpp  google_tv_tests.cpp
sprint4/problems/bookypedia-1/precode/: CMakeLists.txt
sprint4/problems/bookypedia-1/precode/src/: bookypedia.cpp  bookypedia.h
sprint4/problems/bookypedia-1/precode/tests/: tagged_uuid_tests.cpp  use_case_tests.cpp
sprint4/problems/leave_game/solution/: README.md
(+16 files in other folders)
